Fixes on gap bug

--- a/styles/umkm.css
+++ b/styles/umkm.css
@@ -53,7 +53,7 @@ html{
 .content{
     position: relative;  
     width: 100vw;
-    overflow-x: hidden;
+    /*overflow-x: hidden;*/
 }
 
 .section-title{
